[project]
name = "usbfilechecker"
version = "2026.04.1a"
description = "Получение определенного файла с USB flash с последующим сохранением в локальной директории"
requires-python = ">=3.7.3"
dependencies = [
    "black>=23.3.0",
    "toml==0.10.0",
]
[config]
# filename обычно это SN устройства: filename="58381902.xls"
filename="test.xls"